fixed blurry cursor colour

--- a/components/BlendCursor/BlendCursor.module.css
+++ b/components/BlendCursor/BlendCursor.module.css
@@ -5,7 +5,7 @@
   height: 50px;
   border-radius: 50%;
   pointer-events: none;
-  mix-blend-mode: color-burnpublic/images/logo/logo-black.svg;
+  mix-blend-mode: color-burn;
   z-index: 1;
   transform: translate(-50%, -50%);
 }
